// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfExpression allows "n" to be "all" 1`] = `
{
  "$count": {
    "$num": 3,
    "$operator": "$eq",
    "$was": "all",
  },
  "$of": [
    {
      "$requirement": "A",
      "$type": "reference",
    },
    {
      "$requirement": "B",
      "$type": "reference",
    },
    {
      "$requirement": "C",
      "$type": "reference",
    },
  ],
  "$type": "of",
}
`;

exports[`OfExpression allows "n" to be "any" 1`] = `
{
  "$count": {
    "$num": 1,
    "$operator": "$gte",
    "$was": "any",
  },
  "$of": [
    {
      "$requirement": "A",
      "$type": "reference",
    },
    {
      "$requirement": "B",
      "$type": "reference",
    },
    {
      "$requirement": "C",
      "$type": "reference",
    },
  ],
  "$type": "of",
}
`;

exports[`OfExpression allows "n" to be "none" 1`] = `
{
  "$count": {
    "$num": 0,
    "$operator": "$eq",
    "$was": "none",
  },
  "$of": [
    {
      "$requirement": "A",
      "$type": "reference",
    },
    {
      "$requirement": "B",
      "$type": "reference",
    },
    {
      "$requirement": "C",
      "$type": "reference",
    },
  ],
  "$type": "of",
}
`;

exports[`OfExpression allows "n" to be a counter 1`] = `
{
  "$count": {
    "$num": 3,
    "$operator": "$gte",
  },
  "$of": [
    {
      "$requirement": "A",
      "$type": "reference",
    },
    {
      "$requirement": "B",
      "$type": "reference",
    },
    {
      "$requirement": "C",
      "$type": "reference",
    },
  ],
  "$type": "of",
}
`;

exports[`OfExpression if n is "all", it is the number of items in the of-parens 1`] = `
{
  "$count": {
    "$num": 3,
    "$operator": "$eq",
    "$was": "all",
  },
  "$of": [
    {
      "$requirement": "A",
      "$type": "reference",
    },
    {
      "$requirement": "B",
      "$type": "reference",
    },
    {
      "$requirement": "C",
      "$type": "reference",
    },
  ],
  "$type": "of",
}
`;

exports[`OfExpression supports boolean statements within the parens 1`] = `
{
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$of": [
    {
      "$booleanType": "or",
      "$or": [
        {
          "$requirement": "A",
          "$type": "reference",
        },
        {
          "$and": [
            {
              "$requirement": "B",
              "$type": "reference",
            },
            {
              "$requirement": "C",
              "$type": "reference",
            },
          ],
          "$booleanType": "and",
          "$type": "boolean",
        },
      ],
      "$type": "boolean",
    },
    {
      "$requirement": "D",
      "$type": "reference",
    },
  ],
  "$type": "of",
}
`;

exports[`OfExpression supports courses within the parens 1`] = `
{
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$of": [
    {
      "$course": {
        "department": "CSCI",
        "number": 121,
      },
      "$type": "course",
    },
  ],
  "$type": "of",
}
`;

exports[`OfExpression supports modifiers within the parens 1`] = `
{
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$of": [
    {
      "$children": "$all",
      "$count": {
        "$num": 2,
        "$operator": "$gte",
      },
      "$from": "children",
      "$type": "modifier",
      "$what": "course",
    },
    {
      "$count": {
        "$num": 2,
        "$operator": "$gte",
      },
      "$from": "filter",
      "$type": "modifier",
      "$what": "course",
    },
    {
      "$count": {
        "$num": 2,
        "$operator": "$gte",
      },
      "$from": "where",
      "$type": "modifier",
      "$what": "credit",
      "$where": {
        "$key": "year",
        "$operator": "$lte",
        "$type": "qualification",
        "$value": 2016,
      },
    },
  ],
  "$type": "of",
}
`;

exports[`OfExpression supports occurrences within the parens 1`] = `
{
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$of": [
    {
      "$count": {
        "$num": 2,
        "$operator": "$gte",
      },
      "$course": {
        "department": "CSCI",
        "number": 121,
      },
      "$type": "occurrence",
    },
    {
      "$course": {
        "department": "CSCI",
        "number": 308,
      },
      "$type": "course",
    },
  ],
  "$type": "of",
}
`;

exports[`OfExpression supports of-statements of the form "n of ()" 1`] = `
{
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$of": [
    {
      "$course": {
        "department": "CHEM",
        "number": 121,
      },
      "$type": "course",
    },
  ],
  "$type": "of",
}
`;

exports[`OfExpression supports references within the parens 1`] = `
{
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$of": [
    {
      "$requirement": "A",
      "$type": "reference",
    },
    {
      "$requirement": "B",
      "$type": "reference",
    },
    {
      "$requirement": "C",
      "$type": "reference",
    },
    {
      "$requirement": "D",
      "$type": "reference",
    },
  ],
  "$type": "of",
}
`;

exports[`OfExpression supports trailing commas 1`] = `
{
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$of": [
    {
      "$course": {
        "number": 121,
      },
      "$type": "course",
    },
  ],
  "$type": "of",
}
`;

exports[`OfExpression supports where-clauses within the parens 1`] = `
{
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$of": [
    {
      "$course": {
        "department": "CSCI",
        "number": 121,
      },
      "$type": "course",
    },
    {
      "$count": {
        "$num": 1,
        "$operator": "$gte",
      },
      "$distinct": false,
      "$type": "where",
      "$where": {
        "$key": "gereqs",
        "$operator": "$eq",
        "$type": "qualification",
        "$value": "WRI",
      },
    },
  ],
  "$type": "of",
}
`;
